fixed misalignment

--- a/src/components/projects/index.css
+++ b/src/components/projects/index.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
 }
 
